# interface_sdk_c

./: BUILD.gn  OAT.xml  README.OpenSource  README.en.md  README.md  package.json
.github/workflows/: main.yml
BasicServicesKit/: BUILD.gn  ohbattery_info.h  ohbattery_info.ndk.json  ohscan.ndk.json
CryptoArchitectureKit/: BUILD.gn  crypto_architecture_kit.h  crypto_asym_key.h  crypto_common.h  crypto_digest.h  crypto_signature.h  crypto_sym_cipher.h  crypto_sym_key.h  libcrypto_capi.json
DataProtectionKit/:  dlp_permission_api.h  BUILD.gn  dlp_permission_api.h  libdlpperission.ndk.json
ability/ability_runtime/: BUILD.gn  libruntime.ndk.json
ability/ability_runtime/context/: BUILD.gn  libcontext.ndk.json  native_context.h
ability/ability_runtime/include/: native_rumtime.h  runtime.h
account/os_account/: BUILD.gn
account/os_account/include/: os_account.h  os_account_common.h
ai/neural_network_runtime/: BUILD.gn  libneural_network_runtime.ndk.json  neural_network_core.h  neural_network_runtime.h  neural_network_runtime_type.h
api/: @ohos.data.relationalStore.d.ts
ark_runtime/jsvm/: BUILD.gn  jsvm.h  jsvm_types.h  libjsvm.ndk.json
arkui/ace_engine/native/: BUILD.gn  libace.ndk.json  native_animate.h  native_dialog.h  native_drag_and_drop.h  native_event.h  native_gesture.h  native_interface.h  native_interface_xcomponent.h  native_node.h  native_type.h  (+4 more)
arkui/display_manager/: libdm.ndk.json  oh_display_info.h  oh_display_manager.h
arkui/napi/: BUILD.gn  common.h  libnapi.ndk.json  native_api.h
build-tools/capi_parser/: .gitignore  requirements.txt
distributeddatamgr/relational_store/: BUILD.gn  libnative_rdb.ndk.json
distributeddatamgr/udmf/: libudmf.ndk.json  libudmf_ndk.json
docs/: capi_naming.md  howto_add.md  user_guide.md
global/resource_management/: BUILD.gn  libnative_resmgr.ndk.json
hiviewdfx/hiappevent/: BUILD.gn  libhiappevent.ndk.json
hiviewdfx/hicollie/: BUILD.gn  libhicollie.ndk.json
hiviewdfx/hidebug/: BUILD.gn  hidebug.h  libhidebug.ndk.json
hiviewdfx/hidumper/: BUILD.gn  libhidumper.ndk.json
hiviewdfx/hidumper/include/hidumper/: dumper.h
hiviewdfx/hilog/: BUILD.gn  libhilog.ndk.json
hiviewdfx/hitrace/: BUILD.gn  libhitrace.ndk.json
multimedia/audio_framework/: BUILD.gn  ohaudio.ndk.json
multimedia/av_codec/: avcodec_audio_channel_layout.h  native_avcapability.h  native_avcencinfo.h  native_avcodec_audiocodec.h  native_avcodec_audiodecoder.h  native_avcodec_audioencoder.h  native_avcodec_base.h  native_avcodec_videodecoder.h  native_avcodec_videoencoder.h  native_avdemuxer.h  native_averrors.h  native_avformat.h  native_avmemory.h  native_avmuxer.h  native_avsource.h  native_cencinfo.h
multimedia/camera_framework/: camera.h  camera.ndk.json  camera_device.h  camera_manager.h  capture_session.h  dif.diff  photo_output.h  preview_output.h  video_output.h
multimedia/drm_framework/: .native_mediakeysystem.h.swp  BUILD.gn  libnative_drm.ndk.json  native_mediakeysession.h  native_mediakeysystem.h
multimedia/image_framework/: BUILD.gn  libimage2.ndk.json  libimageReceiver2.ndk.json  libimage_creator_ndk.ndk.json  libimage_format_convert_ndk.ndk.json  libimage_ndk.ndk.json  libimage_packer.ndk.json  libimage_packer_ndk.ndk.json  libimage_pixelmap_napi.ndk.json  libimage_receiver.ndk.json  libimage_receiver_ndk.ndk.json  libimage_source.ndk.json  libimage_source_ndk.ndk.json  libohimage.ndk.json  libohimagereceiver.ndk.json  libopencv_ndk.ndk.json  libpixelmap.ndk.json
multimedia/image_framework/include/: image_creator_mdk.h  image_format_convert_mdk.h  image_mdk.h  image_mdk_common.h  image_packer_mdk.h  image_pixel_map_mdk.h  image_pixel_map_napi.h  image_receiver_mdk.h  image_source_mdk.h  opencv_native.h
multimedia/image_framework/include/image/: image.h  image2.h  imageReceiver2.h  image_common.h  image_native.h  image_packer_native.h  image_receiver.h  image_source_native.h  pixelmap_native.h
multimedia/image_framework/ndk_test_example/: BUILD.gn  my_pixel_map.cpp  my_pixel_map.h
multimedia/media_foundation/: native_avbuffer_info.h
multimedia/media_library/: media_access_helper_capi.h  media_asset_base_capi.h  media_asset_capi.h  media_asset_change_request_capi.h  media_asset_manager_capi.h  moving_photo_capi.h
multimedia/player_framework/: avplayer.h  avplayer_base.h  native_avscreen_capture.h  native_avscreen_capture_base.h  native_avscreen_capture_errors.h
multimedia/video_processing_engine/: BUILD.gn  image_processing.h  image_processing_types.h  libimage_processing.ndk.json  libvideo_processing.ndk.json  libvideo_processing_engine.ndk.json  video_processing.h  video_processing_types.h
multimedia/video_processing_engine/image_processing/: libimage_processing.ndk.json
multimedia/video_processing_engine/video_processing/: BUILD.gn  libvideo_processing.ndk.json
multimodalinput/input/: BUILD.gn  input_event.h
network/netmanager/: BUILD.gn  libnet_connection.ndk.json
network/netssl/: BUILD.gn
patches/: patches.json
print/print_fwk/: BUILD.gn
resourceschedule/ffrt/: BUILD.gn
resourceschedule/qos_manager/: qos.h
security/access_token/: BUILD.gn  libaccesstoken.ndk.json
security/huks/: BUILD.gn  libhuks.ndk.json
sensors/sensor/: BUILD.gn  oh_sensor_type.h
tee/: BUILD.gn  libtee.ndk.json
tee/include/: oemkey.h  rpmb_driver_rw_api.h  rpmb_fcntl.h  tee_arith_api.h  tee_client_api.h  tee_client_constants.h  tee_client_type.h  tee_core_api.h  tee_crypto_api.h  tee_crypto_hal.h  tee_defines.h  tee_drv_client.h  tee_dynamic_srv.h  tee_ext_api.h  tee_hw_ext_api.h  tee_hw_ext_api_legacy.h  tee_internal_se_api.h  tee_log.h  tee_mem_mgmt_api.h  tee_mem_monitoring_api.h  tee_object_api.h  tee_property_api.h  tee_rtc_time_api.h  tee_service_public.h  tee_sharemem_ops.h  tee_time_api.h  tee_trusted_storage_api.h  tee_tui_gp_api.h
window/window_manager/: BUILD.gn  native_window_comm.h  native_window_event_filter.h
(+435 files in other folders)
