# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libpixelmap_ndk") {
  ndk_description_file = "./libimage_pixelmap_napi.ndk.json"
  min_compact_version = "1"
  output_name = "pixelmap_ndk"
}

ohos_ndk_headers("image_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework"
  sources = [
    "./include/image_pixel_map_mdk.h",
    "./include/image_pixel_map_napi.h",
  ]
}

ohos_ndk_library("libimage_ndk") {
  ndk_description_file = "./libimage_ndk.ndk.json"
  min_compact_version = "1"
  output_name = "image_ndk"
}

ohos_ndk_headers("image_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework"
  sources = [
    "./include/image_mdk.h",
    "./include/image_mdk_common.h",
  ]
}

ohos_ndk_library("libimage_receiver_ndk") {
  ndk_description_file = "./libimage_receiver_ndk.ndk.json"
  min_compact_version = "1"
  output_name = "image_receiver_ndk"
}

ohos_ndk_headers("image_receiver_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework"
  sources = [ "./include/image_receiver_mdk.h" ]
}

ohos_ndk_library("libimage_source_ndk") {
  ndk_description_file = "./libimage_source_ndk.ndk.json"
  min_compact_version = "1"
  output_name = "image_source_ndk"
}

ohos_ndk_headers("image_source_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework"
  sources = [ "./include/image_source_mdk.h" ]
}

ohos_ndk_library("libimage_packer_ndk") {
  ndk_description_file = "./libimage_packer_ndk.ndk.json"
  output_name = "image_packer_ndk"
}

ohos_ndk_headers("image_packer_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework"
  sources = [ "./include/image_packer_mdk.h" ]
}

ohos_ndk_library("libimage2") {
  ndk_description_file = "./libimage2.ndk.json"
  min_compact_version = "12"
  output_name = "image2"
}

ohos_ndk_headers("image2_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework/image"
  sources = [ "./include/image/image2.h" ]
}

ohos_ndk_library("libimageReceiver2") {
  ndk_description_file = "./libimageReceiver2.ndk.json"
  min_compact_version = "12"
  output_name = "imageReceiver2"
}

ohos_ndk_headers("imageReceiver2_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/image_framework/image"
  sources = [ "./include/image/imageReceiver2.h" ]
}
