# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_headers("video_processing_engine_ndk_headers") {
  dest_dir = "$ndk_headers_out_dir/multimedia/video_processing_engine"
  sources = [
    "./image_processing_types.h",
    "./image_processing.h",
    "./video_processing_types.h",
    "./video_processing.h"
  ]
}

ohos_ndk_library("libvideo_processing_engine_ndk") {
  ndk_description_file = "./video_processing_engine.ndk.json"
  output_name = "video_processing_engine"
  output_extension = "so"
  min_compact_version = "12"
  system_capability = "SystemCapability.Multimedia.VideoProcessingEngine"
  system_capability_headers = [
    "multimedia/video_processing_engine/image_processing_types.h"
    "multimedia/video_processing_engine/image_processing.h"
    "multimedia/video_processing_engine/video_processing_types.h"
    "multimedia/video_processing_engine/video_processing.h"
  ]
}